exp/knative-ml/deploy/eventing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-eventing
