exp/knative-ml/deploy/serving.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
