exp/knative-ml/deploy/ceph-source.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-ceph-source-svc
  namespace: default
spec:
  selector:
    eventing.knative.dev/sourceName: ml-ceph-source
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
